# chemoxrl

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  train.py
chemoxrl/: __init__.py  cell.py  rppo.py
chemoxrl_aux/: evaluate.py  loader.py  policies.py
models/PPO_R05_SF_MT_4096_20230704-0845_42/: checkpoint_1992294400  config.json
models/PPO_R05_ST_MF_4096_20230613-1523_42/: checkpoint_1912602624
models/PPO_R05_ST_MT_4096_20230619-1003_42/: checkpoint_2818572288  config.json  env_params.json
models/PPO_R06_SF_MT_4096_20230704-1011_43/: checkpoint_272629760  config.json  env_params.json
models/PPO_R06_ST_MF_4096_20230613-1523_42/: checkpoint_1115684864
models/PPO_R06_ST_MT_4096_20230619-1202_43/: checkpoint_273678336  config.json
models/PPO_R07_SF_MT_4096_20230704-1033_44/: checkpoint_297795584  config.json
models/PPO_R07_ST_MF_4096_20230613-1523_42/: checkpoint_1932525568
models/PPO_R07_ST_MT_4096_20230619-1247_44/: checkpoint_537919488  config.json  env_params.json
models/PPO_R08_SF_MT_4096_20230704-1054_45/: checkpoint_293601280  config.json  env_params.json
models/PPO_R08_ST_MF_4096_20230613-1522_42/: checkpoint_1992294400
models/PPO_R08_ST_MT_4096_20230619-1331_45/: checkpoint_679477248  config.json
models/PPO_R09_SF_MT_4096_20230704-1116_46/: checkpoint_239075328  config.json
models/PPO_R09_ST_MF_4096_20230613-1522_42/: checkpoint_1195376640
models/PPO_R09_ST_MT_4096_20230619-1412_46/: checkpoint_868220928  config.json  env_params.json
models/PPO_R10_SF_MT_4096_20230704-1138_47/: checkpoint_348127232  config.json  (+1 more)
(+148 files in other folders)
